--- a/package.json
+++ b/package.json
@@ -3,25 +3,51 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "next dev",
+    "dev": "next dev --turbo",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint --fix",
+    "format": "prettier --write .",
+    "codegen": "graphql-codegen"
   },
   "dependencies": {
+    "@radix-ui/react-dropdown-menu": "^2.0.6",
+    "@radix-ui/react-label": "^2.0.2",
+    "@radix-ui/react-progress": "^1.0.3",
+    "@radix-ui/react-slot": "^1.0.2",
+    "@radix-ui/react-switch": "^1.0.3",
+    "@radix-ui/react-tooltip": "^1.0.7",
+    "@tanstack/react-query": "^5.17.1",
+    "graphql": "^16.8.1",
+    "graphql-request": "^5.0.0",
+    "lucide-react": "^0.303.0",
+    "next": "14.0.4",
+    "next-themes": "^0.2.1",
     "react": "^18",
     "react-dom": "^18",
-    "next": "14.0.4"
+    "use-count-up": "^3.0.1",
+    "use-sound": "^4.0.1",
+    "usehooks-ts": "^2.9.1",
+    "zod": "^3.22.4"
   },
   "devDependencies": {
-    "typescript": "^5",
+    "@0no-co/graphqlsp": "^0.13.0",
+    "@fellipeutaka/eslint-config": "^1.12.4",
+    "@graphql-codegen/cli": "^5.0.0",
+    "@graphql-codegen/client-preset": "^4.1.0",
+    "@graphql-eslint/eslint-plugin": "^3.20.1",
+    "@graphql-typed-document-node/core": "^3.2.0",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
     "autoprefixer": "^10.0.1",
+    "eslint": "^8.56.0",
+    "mizuhara": "^2.1.0",
     "postcss": "^8",
-    "tailwindcss": "^3.3.0",
-    "eslint": "^8",
-    "eslint-config-next": "14.0.4"
+    "prettier": "^3.1.1",
+    "sharp": "^0.33.1",
+    "tailwindcss": "^3.4.0",
+    "tailwindcss-animated": "^1.0.1",
+    "typescript": "^5"
   }
 }
