--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "graphql": "^16.8.1",
     "graphql-request": "^5.0.0",
     "lucide-react": "^0.303.0",
+    "million": "^2.6.4",
     "next": "14.0.4",
     "next-themes": "^0.2.1",
     "react": "^18",
